SERVER-91223 NumberDecimal $log should use ln(input)/ln(base) for generic base value (#23865)

GitOrigin-RevId: 6fed8cf3abd121fff0ba63f5259009ea71262b77